ai/base/openwebui/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: ai
  labels:
    app: openwebui
    app.kubernetes.io/component: gui
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/name: openwebui
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: openwebui
      app.kubernetes.io/component: gui
      app.kubernetes.io/part-of: ai
      app.kubernetes.io/name: openwebui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openwebui
        app.kubernetes.io/component: gui
        app.kubernetes.io/part-of: ai
        app.kubernetes.io/name: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:0.8.10
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        startupProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        tty: true
        volumeMounts:
          - name: openwebui-pvc
            mountPath: /app/backend/data 
        securityContext: {}
        resources:
          requests:
            memory: "1000Mi"
            cpu: "2000m"
          limits:
            memory: "4000Mi"
            cpu: "4000m"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/ai: "true"
      volumes:
        - name: openwebui-pvc
          persistentVolumeClaim:
            claimName: openwebui
